# usst-rollcall

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: config.yaml
src/usst_rollcall/: __init__.py  cli.py  client.py  config.py  default_config.yaml  login.py  models.py  notify.py  session.py  signer.py  state.py  watcher.py
