[project]
name = "usst-rollcall"
version = "0.1.0"
description = "USST TronClass rollcall watcher and notifier"
readme = "README.md"
authors = [
    { name = "Nitmi", email = "0@123778.xyz" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.24.2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
keywords = ["usst", "tronclass", "rollcall", "cli", "notification"]

[project.urls]
Homepage = "https://github.com/Nitmi/usst-rollcall"
Repository = "https://github.com/Nitmi/usst-rollcall"
Issues = "https://github.com/Nitmi/usst-rollcall/issues"

[project.scripts]
usst-rollcall = "usst_rollcall.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
